[package]
name = "wasm"
version = "0.1.0"
authors = ["monsieurbadia <william.b@groover.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.56"
wasm-bindgen = "0.2.63"
web-sys = "0.3.56"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
web-sys = { version = "0.3.56", features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
] }

[profile.release]
lto = true
opt-level = "s"
